--- a/package.json
+++ b/package.json
@@ -1,45 +1,28 @@
 {
-  "name": "yoosif.com",
-  "private": true,
-  "version": "3.0.0",
-  "description": "Personal website running on Gatsby, React, and Node.js.",
-  "author": "Yoosif Sherif",
-  "license": "MIT",
+  "name": "website_scratch",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && gatsby build",
-    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && gatsby develop",
+    "build": "gatsby build",
+    "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "gatsby": "^2.24.73",
-    "gatsby-image": "^2.4.21",
-    "gatsby-plugin-feed": "^2.5.14",
-    "gatsby-plugin-local-search": "^2.0.0",
-    "gatsby-plugin-netlify": "^2.3.17",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "2.6.40",
-    "gatsby-remark-autolink-headers": "^2.3.15",
-    "gatsby-remark-images": "^3.3.33",
-    "gatsby-remark-interactive-gifs": "^1.0.4",
-    "gatsby-remark-prismjs": "^3.5.16",
-    "gatsby-source-filesystem": "^2.3.34",
-    "gatsby-transformer-remark": "^2.8.38",
-    "gatsby-transformer-sharp": "^2.5.17",
-    "http-server": "^0.12.3",
-    "prismjs": "^1.22.0",
-    "query-string": "^6.13.5",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0",
-    "react-use-flexsearch": "^0.1.1"
-  },
-  "devDependencies": {
-    "eslint": "^7.9.0",
-    "eslint-config-react-app": "^5.2.1",
-    "gatsby-plugin-manifest": "^2.4.30"
-  },
-  "resolutions": {
-    "gatsby-react-router-scroll": "3.0.3"
+    "gatsby": "^5.13.3",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-react-helmet": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-remark-images": "^7.13.1",
+    "gatsby-remark-interactive-gifs": "^1.0.5",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-remark": "^6.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   }
 }
